Avoid notification overlap with login/sign-in bar

--- a/assets/sass/site.scss
+++ b/assets/sass/site.scss
@@ -1142,6 +1142,7 @@ body {
   color: #fff;
   font-family: 'Brandon_Grotesque',sans-serif;
   font-weight: 600;
+  transition: margin 0.4s ease;
 
   .wrapper {
     padding-left: 0;
